src/css/style.scss
@import "./partials/reset";
@import "./partials/colors";
@import "./partials/mixins";
@import "./partials/breakpoints";

@font-face {
  font-family: "Roboto-Light";
  font-display: swap;
  src: url(/fonts/Roboto-Light.woff2) format("woff2");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Roboto-Light", "Calibri", sans-serif;
  letter-spacing: 1px;
}

section {
  min-height: 100vh;
  @include pagePadding;
}

.heading {
  font-family: "PlayfairDisplay", san-serif;
  font-size: clamp(1.4rem, calc(12px + 1.5vw), 1.6rem);
  color: $secondary;
  text-transform: uppercase;
  margin: 3rem 0;
  text-align: center;
}

.btn {
  display: inline-block;
  background-color: $teriary;
  color: $primary;
  font-size: 0.8rem;
  font-weight: bold;
  text-transform: uppercase;
  padding: 0.7rem 1.4rem;
  border: none;
  cursor: pointer;
}

.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90vw;
  max-height: 95vh;
  padding: 4vw 8vw;
  margin: 0 auto;
  background-color: $white;
  pointer-events: none;
  border-radius: 5px;
  opacity: 0;
  z-index: 2;
  @include transition(all, 0.3s);

  & .heading {
    margin-top: 0;
    margin-bottom: 2rem;
  }

  & .close {
    position: absolute;
    top: 1rem;
    right: 1rem;
    cursor: pointer;
  }

  @media (min-width: $tablet) {
    width: 70vw;
    min-height: 70vh;
  }

  @media (min-width: $laptop) {
    width: 50vw;
    min-height: 70vh;
  }
}

.overlay {
  opacity: 0;
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.5);
  pointer-events: none;
  @include transition(all, 0.3s);
  z-index: 1;
}

.page-padding {
  max-width: 90ch;
  min-height: 70vh;
  margin: 0 auto;
  padding: 2vw 0;

  @media (max-width: $tablet) {
    padding: 2vw 6vw;
  }
}

.paragraph {
  $font: clamp(1rem, calc(12px + 0.5vw), 1.5rem);
  font-weight: 300;
  line-height: 1.8;
  letter-spacing: 1.2px;
  text-indent: 1rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  & a {
    text-decoration: underline;
  }

  & span {
    text-decoration: underline;
  }
}

.list-item {
  list-style-type: " \2014";
  margin: 1rem 0 0 2rem;
  padding-left: 1rem;
}

